--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Piano Simulator</title>
 
-  <!-- styles -->
+  <!-- Styles -->
   <link rel="stylesheet" href="./src/styles/reset.css">
   <link rel="stylesheet" href="./src/styles/main.css">
 
-  <!-- fonts -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200;1,300;1,400&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <div class="container">
     <header>
       <h2>Virtual Piano</h2>
       <div class="column volume-slider">
-        <span>Volume</span> <input type="range" min="0" max="1" value="0.5" step="any">
+        <span>Volume</span> <input type="range" type="range" min="0" max="1" value="0.5" step="any">
       </div>
       <div class="column keys-check">
-        <span>Teclas</span> <input type="checkbox" checked>
+        <span>Teclas</span> <input type="checkbox" name="" id="" checked>
       </div>
     </header>
     <ul class="piano-keys">
@@ -49,8 +45,6 @@
       <li class="key white" data-key=";"><span>;</span></li>
     </ul>
   </div>
-
-  <script src="./src/scripts/engine.js" defer></script>
+  <script src="./src/scripts/engine.js"></script>
 </body>
-
 </html>
